--- a/src/widgets/channel/add-channel/UI/channel-identification/UI/styles.module.scss
+++ b/src/widgets/channel/add-channel/UI/channel-identification/UI/styles.module.scss
@@ -61,12 +61,14 @@
 
       .choose_platform {
         display: grid;
-        grid-template: 1fr/ 1fr 1fr 1fr;
+        grid-template: 1fr / repeat(4, 1fr);
         column-gap: 20px;
         justify-content: space-between;
         align-items: center;
 
         @media (max-width: 576px) {
+          grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+          row-gap: 10px;
           column-gap: 15px;
         }
 
