--- a/src/shared/ui/wallet-card/styles.module.scss
+++ b/src/shared/ui/wallet-card/styles.module.scss
@@ -100,7 +100,7 @@
       }
     }
 
-    transform: scale(1.05);
+    // transform: scale(1.05);
     transition: all 0.3s ease;
 
     // box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.2) inset;
