--- a/src/widgets/communication/notifications/UI/styles.module.scss
+++ b/src/widgets/communication/notifications/UI/styles.module.scss
@@ -8,6 +8,8 @@
   grid-auto-flow: column;
   width: 100%;
   height: 100%;
+  justify-content: center;
+
   svg {
     width: 20px;
     height: 20px;
