--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -527,8 +527,7 @@ body {
       // --sidebar-foreground: oklch(0.3015 0.0572 282.4176);
       // --sidebar-primary: oklch(0.5417 0.1790 288.0332);
       // --sidebar-primary-foreground: oklch(1.0000 0 0);
-      // --sidebar-accent: oklch(0.9221 0.0373 262.1410);
-      ; // --sidebar-ring: oklch(0.5417 0.1790 288.0332); // --sidebar-border: oklch(0.9115 0.0216 285.9625); // --sidebar-accent-foreground: oklch(0.3015 0.0572 282.4176);
+      ; // --sidebar-ring: oklch(0.5417 0.1790 288.0332); // --sidebar-border: oklch(0.9115 0.0216 285.9625); // --sidebar-accent-foreground: oklch(0.3015 0.0572 282.4176); // --sidebar-accent: oklch(0.9221 0.0373 262.1410);
   }
 }
 
