--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -522,11 +522,7 @@ body {
     --sidebar-accent: 240 3.7% 15.9%;
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%
-      //   --sidebar: oklch(0.9580 0.0133 286.1454);
-      // --sidebar-foreground: oklch(0.3015 0.0572 282.4176);
-      // --sidebar-primary: oklch(0.5417 0.1790 288.0332);
-      ; // --sidebar-ring: oklch(0.5417 0.1790 288.0332); // --sidebar-border: oklch(0.9115 0.0216 285.9625); // --sidebar-accent-foreground: oklch(0.3015 0.0572 282.4176); // --sidebar-accent: oklch(0.9221 0.0373 262.1410); // --sidebar-primary-foreground: oklch(1.0000 0 0);
+    --sidebar-ring: 217.2 91.2% 59.8%; // --sidebar-ring: oklch(0.5417 0.1790 288.0332); // --sidebar-border: oklch(0.9115 0.0216 285.9625); // --sidebar-accent-foreground: oklch(0.3015 0.0572 282.4176); // --sidebar-accent: oklch(0.9221 0.0373 262.1410); // --sidebar-primary-foreground: oklch(1.0000 0 0); // --sidebar-primary: oklch(0.5417 0.1790 288.0332); // --sidebar-foreground: oklch(0.3015 0.0572 282.4176); //   --sidebar: oklch(0.9580 0.0133 286.1454);
   }
 }
 
