--- a/src/shared/ui/multiSelect/styles.module.scss
+++ b/src/shared/ui/multiSelect/styles.module.scss
@@ -38,6 +38,10 @@
         // grid-template-columns: max-content 1fr;
         // column-gap: 10px;
       }
+
+      @media (max-width: 576px) {
+        font-size: 12px;
+      }
     }
 
     .icons {
@@ -73,5 +77,9 @@
     div {
       border: 1px solid var(--Personal-colors-main);
     }
+  }
+
+  @media (max-width: 576px) {
+    font-size: 12px;
   }
 }
