--- a/src/features/channel/addChannel/UI/styles.module.scss
+++ b/src/features/channel/addChannel/UI/styles.module.scss
@@ -4,6 +4,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+
+    @media (max-width: 576px) {
+      font-size: var(--font-size-text-accent-xs);
+    }
   }
 
   svg {
