--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/wallets-card/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/wallets-card/styles.module.scss
@@ -29,6 +29,10 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+
+      @media (max-width: 576px) {
+        font-weight: 400;
+      }
     }
 
     .amount {
