--- a/src/widgets/layouts/components/sidebar/UI/styles.module.scss
+++ b/src/widgets/layouts/components/sidebar/UI/styles.module.scss
@@ -22,6 +22,9 @@
     padding: 20px;
     cursor: pointer;
     position: relative;
+    svg {
+      stroke-width: 1.25px;
+    }
 
     &:hover {
       border-radius: 50%;
