--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -4,7 +4,7 @@
   --container-padding-side: 50px;
   --container-padding-top: 80px;
   --Subtitle-text: #666;
-  --secondary-text: #606060;
+  --secondary-text: #b0bcda;
   --sticky-blog-top: 50px;
   --left-padding-header: 2.5vw;
 
@@ -51,7 +51,7 @@
   --Text-sample: #acaaaa;
   --Sub-text: #4d4d4d;
   --choosen-text: #808080;
-  --Inside-container: #bdbdbd;
+  --Inside-container: #d4ddf3;
   --Containers: #8c8c8c;
   --Card-separator: #d9d9d9;
   --black-20: #ccc;
