--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/wallets-card/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/wallets-card/styles.module.scss
@@ -5,7 +5,7 @@
   padding: 12px;
 
   border-radius: 22px;
-  border: 0.2px solid rgba(0, 0, 0, 0.1);
+  border: 0.2px solid var(--Inside-container);
   background: #fff;
   box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
 
