--- a/src/widgets/layouts/components/header/UI/nav/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/nav/styles.module.scss
@@ -19,24 +19,14 @@
     display: grid;
     grid-auto-flow: column;
     align-items: center;
+    column-gap: 5px;
 
     cursor: pointer;
     padding: 5px 10px;
     color: var(--Personal-colors-black);
 
-    &:hover {
-      background-color: #f0f0f0;
-      border-radius: 10px;
-    }
-
     &.active {
-      color: blue; /* Цвет текста на текущей странице */
+      color: var(--Personal-colors-main); /* Цвет текста на текущей странице */
     }
-  }
-
-  svg {
-    margin-right: 5px;
-    width: 16px;
-    height: 15px;
   }
 }
