--- a/src/widgets/layouts/components/header/header.module.scss
+++ b/src/widgets/layouts/components/header/header.module.scss
@@ -49,9 +49,10 @@
   .dropdown {
     background: rgba(255, 255, 255, 0.7);
     border-radius: 50px;
-    box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.3);
-    backdrop-filter: blur(8px);
-    border: 1px solid rgba(142, 84, 233, 0.3);
+    box-shadow: 0px 2px 10px 1px
+      color-mix(in srgb, var(--Personal-colors-main), transparent 50%);
+    border: 1px solid
+      color-mix(in srgb, var(--Personal-colors-main), transparent 50%);
     height: var(--header-height-xl);
     width: var(--header-height-xl);
     display: grid;
@@ -72,14 +73,17 @@
     align-items: center;
     background: rgba(255, 255, 255, 0.7);
     border-radius: 50px;
-    box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.3);
+    box-shadow: 0px 2px 10px 1px
+      color-mix(in srgb, var(--Personal-colors-main), transparent 50%);
     backdrop-filter: blur(8px);
-    border: 1px solid rgba(142, 84, 233, 0.3);
+    border: 1px solid
+      color-mix(in srgb, var(--Personal-colors-main), transparent 50%);
 
     @media (max-width: 768px) {
       border-radius: 0;
       background: rgba(255, 255, 255, 0.5);
-      box-shadow: 0px 2px 10px 1px rgba(142, 84, 233, 0.15);
+      box-shadow: 0px 2px 10px 1px
+        color-mix(in srgb, var(--Personal-colors-main), transparent 50%);
       border: none;
     }
 
@@ -102,7 +106,7 @@
 
       .separator {
         height: 100%;
-        border-right: 0.5px solid #b2b2b2;
+        border-right: 0.5px solid var(--Inside-container);
       }
     }
   }
