fix: rework cta section

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -31,7 +31,8 @@
   );
 
   // Colors
-  --Personal-colors-black: #000;
+  --Personal-colors-black: #022247;
+  --Personal-colors-light-black: #133c71;
   --Personal-colors-main: #0badc2;
   --Personal-colors-main2: #0aa5be;
   --Personal-colors-White: #fff;
