fix: service text and text json

--- a/src/widgets/mainPages/services/serviceCard/UI/styles.module.scss
+++ b/src/widgets/mainPages/services/serviceCard/UI/styles.module.scss
@@ -35,7 +35,7 @@
   }
 
   .text {
-    color: var(--secondary-text);
+    color: var(--Personal-colors-light-black);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
