--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -141,7 +141,7 @@ body {
       position: absolute;
       inset: 0;
       z-index: -1;
-      opacity: 0.5; // теперь opacity только на градиент
+      opacity: 0.2; // теперь opacity только на градиент
       background-image: radial-gradient(
           circle at 10% 80%,
           var(--Personal-colors-main),
@@ -154,10 +154,11 @@ body {
         );
 
       @media (max-width: 992px) {
+        opacity: 0.15;
         background-image: radial-gradient(
             circle at 10% 80%,
             var(--Personal-colors-main),
-            transparent 40%
+            transparent 20%
           ),
           radial-gradient(
             circle at 95% 20%,
