fix: wallet card and payme/click disable

--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -54,6 +54,15 @@
       @media (max-width: 576px) {
         font-weight: 500;
       }
+
+      svg {
+        width: 22px;
+        height: auto;
+        stroke-width: 1.5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
 
     &.active {
