--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -44,6 +44,10 @@
 
     .wallet__block {
       padding: 20px;
+
+      @media (max-width: 576px) {
+        padding: 0px 15px 10px 15px;
+      }
     }
 
     .accordion__block {
