--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/wallets-card/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/wallets-card/styles.module.scss
@@ -9,17 +9,23 @@
   background: #fff;
   box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
 
+  @media (max-width: 576px) {
+    padding: 0px;
+    border-radius: 0px;
+    border: none;
+    box-shadow: none;
+  }
+
   .header {
     display: grid;
     grid-auto-flow: column;
     column-gap: 10px;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 10px;
 
     @media (max-width: 576px) {
-      grid-auto-flow: row;
-      row-gap: 5px;
+      justify-content: start;
       padding: 5px;
     }
 
@@ -30,8 +36,18 @@
       font-weight: 600;
       line-height: normal;
 
+      .icon {
+        display: none;
+      }
+
       @media (max-width: 576px) {
-        font-weight: 400;
+        .icon {
+          display: block;
+        }
+
+        span {
+          display: none;
+        }
       }
     }
 
