--- a/src/features/createOrder/calendar/UI/styles.scss
+++ b/src/features/createOrder/calendar/UI/styles.scss
@@ -182,7 +182,7 @@
     }
 
     &--range {
-      background: rgba(71, 113, 230, 0.5);
+      // background: rgba(71, 113, 230, 0.5);
       border-radius: 6px !important;
     }
 
