--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -107,6 +107,7 @@
     // background-size: cover;
     position: relative;
     height: inherit;
+    max-height: inherit;
     display: grid;
     grid-template: min-content 1fr /1fr;
 
