fix: fix styles

--- a/src/features/channel/accommPrice/UI/styles.module.scss
+++ b/src/features/channel/accommPrice/UI/styles.module.scss
@@ -38,7 +38,7 @@
     &.active {
       box-shadow: none;
       color: var(--Personal-colors-White);
-      background: var(--Personal-colors-Main);
+      background: var(--Personal-colors-main);
     }
   }
 
