--- a/src/widgets/adminPanel/channels/channels-list/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/channels/channels-list/card/UI/styles.module.scss
@@ -226,11 +226,20 @@
         grid-column: span 1; // Занимают по одному столбцу
       }
     }
+  }
+}
 
-    .buttons {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      column-gap: 10px;
-    }
+.buttons {
+  display: grid;
+  column-gap: 10px;
+
+  // если 2 элемента внутри
+  &:has(:nth-child(2):last-child) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  // если 3 элемента внутри
+  &:has(:nth-child(3):last-child) {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
