--- a/src/shared/ui/multiSelect/styles.module.scss
+++ b/src/shared/ui/multiSelect/styles.module.scss
@@ -20,6 +20,10 @@
     width: 100%;
     overflow: hidden;
 
+    @media (max-width: 576px) {
+      gap: 4px;
+    }
+
     .text {
       display: flex;
       flex-wrap: wrap;
