--- a/src/widgets/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/widgets/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -77,6 +77,7 @@
     align-items: center;
     background: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(20px);
+    position: relative;
 
     height: var(--header-height-xl);
 
