--- a/src/widgets/project/manager/UI/managerMyProject/card/UI/styles.module.scss
+++ b/src/widgets/project/manager/UI/managerMyProject/card/UI/styles.module.scss
@@ -19,7 +19,7 @@
 
 .card {
   display: grid;
-  grid-template: 1fr / 7.5fr 12fr 1.4fr;
+  grid-template: 1fr / 7.5fr 12fr;
   padding-top: 15px;
 
   @media (max-width: 768px) {
@@ -181,7 +181,7 @@
     display: grid;
     grid-template: repeat(2, 1fr) / 1fr;
     padding: 0 20px;
-    border-right: 1px solid var(--Card-separator);
+    // border-right: 1px solid var(--Card-separator);
 
     @media (max-width: 992px) {
       grid-template: 1fr / repeat(2, 1fr);
@@ -445,6 +445,15 @@
         grid-template: unset;
         row-gap: 20px;
         padding-left: 15px;
+        align-content: center;
+      }
+
+      @media (max-width: 768px) {
+        padding-top: 0;
+        grid-auto-flow: row;
+        grid-template: unset;
+        row-gap: 20px;
+        padding-left: 0px;
         align-content: center;
       }
     }
