--- a/src/widgets/layouts/components/sidebar/sidebar.module.scss
+++ b/src/widgets/layouts/components/sidebar/sidebar.module.scss
@@ -7,7 +7,7 @@
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 50px;
-  width: var(--header-height-xl);
+  width: var(--sidebar-width);
   border: 1px solid
     color-mix(in srgb, var(--Personal-colors-main), transparent 50%);
   z-index: 40;
@@ -17,7 +17,7 @@
   }
 
   .menu {
-    padding-top: calc(var(--container-padding-top) + 3rem);
+    padding-top: calc(var(--container-padding-top) + 1rem);
     display: grid;
     grid-auto-flow: row;
     row-gap: 25px;
@@ -26,11 +26,11 @@
     transition: all 0.5s ease;
 
     &.hidden {
-      padding-top: 2rem;
+      padding-top: 1rem;
     }
 
     &.visible {
-      padding-top: calc(var(--container-padding-top) + 3rem);
+      padding-top: calc(var(--container-padding-top) + 1rem);
     }
   }
 }
