--- a/src/widgets/adminPanel/channels/channels-list/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/channels/channels-list/card/UI/styles.module.scss
@@ -1,13 +1,12 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  row-gap: 15px;
   background: var(--Personal-colors-White, #fff);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
 
   .top {
     display: grid;
-    grid-template-columns: repeat(5, 1fr) max-content;
+    grid-template-columns: 2.5fr 0.7fr 0.5fr 0.8fr 1fr max-content;
     column-gap: 20px;
     padding: 15px 20px;
     min-height: 70px;
@@ -154,6 +153,7 @@
     grid-auto-flow: row;
     row-gap: 15px;
     padding: 20px;
+    padding-top: 0px;
     overflow: unset;
 
     .info {
