--- a/src/entities/platform/ui/displays/displayInstagram/feed/styles.module.scss
+++ b/src/entities/platform/ui/displays/displayInstagram/feed/styles.module.scss
@@ -106,9 +106,6 @@
       }
     }
 
-    .mockup {
-    }
-
     .display {
       position: absolute;
       top: 50%;
@@ -238,6 +235,26 @@
             font-size: 12px;
             padding: 0px 3%;
             color: #fff;
+            white-space: pre-wrap;
+            word-break: break-word;
+
+            code {
+              font-family: monospace;
+              background: rgba(255, 255, 255, 0.1);
+              padding: 1px 3px;
+              border-radius: 3px;
+              color: #f9a8d4;
+            }
+
+            b,
+            strong {
+              font-weight: bold;
+            }
+
+            i,
+            em {
+              font-style: italic;
+            }
           }
 
           .info {
