--- a/src/entities/platform/ui/displays/displayTelegram/UI/styles.module.scss
+++ b/src/entities/platform/ui/displays/displayTelegram/UI/styles.module.scss
@@ -85,9 +85,6 @@
       color: #1269a3;
     }
 
-    .mockup {
-    }
-
     .display {
       position: absolute;
       top: 50%;
@@ -124,6 +121,26 @@
             font-size: 14px;
             padding: 0px 5px;
             color: #fff;
+            white-space: pre-wrap;
+            word-break: break-word;
+
+            code {
+              font-family: monospace;
+              background: rgba(255, 255, 255, 0.1);
+              padding: 1px 3px;
+              border-radius: 3px;
+              color: #f7e0fc;
+            }
+
+            b,
+            strong {
+              font-weight: bold;
+            }
+
+            i,
+            em {
+              font-style: italic;
+            }
           }
 
           .info {
